# SFML-main

./: CMakeLists.txt  README.md
01-Test/include/: MyClass.h
01-Test/src/: main.cpp
02-Zelda/src/: main.cpp
03-PaintingDrawer/include/: RectanglePainting.h  SquarePainting.h  UtilityFunction.h
03-PaintingDrawer/src/: RectanglePainting.cpp  SquarePainting.cpp  main.cpp
04-Cuphead/src/: main.cpp
05-Arkanoid/include/: Ball.h  Brick.h  Game.h  Player.h
05-Arkanoid/src/: Ball.cpp  Brick.cpp  Game.cpp  Player.cpp  main.cpp
